* תיקון אוברליי תגיות בסינון לפי תגיות במידה ואין לי תגית משוייכת להזנה * סגירת תפריט פילטר כשאוברליי נפתח

--- a/Client/Pages/ProfilePage.razor
+++ b/Client/Pages/ProfilePage.razor
@@ -490,7 +490,7 @@
                                     <div class="counter">
 
 
-                                        <span>@tagTitleInputLength/8</span>
+                                     @*   <span>@tagTitleInputLength/8</span>*@
 
 
                                     </div>
@@ -514,7 +514,7 @@
                                     <div class="counter">
 
 
-                                        <span>@tagTitleInputLength/8</span>
+                                        @*<span>@tagTitleInputLength/8</span>*@
 
 
                                     </div>
